Fixed alignment issue on debrief and fixed confirm details to display transmission properly (#1156)

--- a/src/app/pages/view-test-result/components/safety-question-data-row/safety-question-data-row.scss
+++ b/src/app/pages/view-test-result/components/safety-question-data-row/safety-question-data-row.scss
@@ -1,4 +1,7 @@
 :host {
+  .alignment-fix {
+    flex-direction: column;
+  }
   .mes-data.bold {
     font-weight: bold;
   }
